# openlake

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile
docs/: README.md  roadmap.md
docs/architecture/: system-overview.md
docs/contributing/: contributing.md  good-first-issues.md
docs/development/: coding-standards.md  repo-structure.md
docs/getting-started/: day-1-walkthrough.md  overview.md
src/openlake/api/: app.py
tests/: test_health.py
ui/: Dockerfile  package-lock.json  package.json
ui/app/: page.tsx
ui/app/api/health/: route.ts
